# distinguishable_data

./: .gitignore  pyproject.toml
data/noise_separability/: cvae_breast.pt  cvae_diabetes.pt  cvae_hiv.pt
data_synthesis/models/: cvae.py  gmm.py
data_synthesis/notebooks/: 00_block_auc_common.ipynb  01_block_only_auc.ipynb  02_block_drop_auc.ipynb  03_block_profile_real_vs_synthetic.ipynb  04_block_drop_real_vs_synthetic.ipynb  ablation_cvae.ipynb  auc_vs_preserve.ipynb  figure4_absolute_profile_sensitivity_analysis.ipynb  figure4_tsne_sensitivity_analysis.ipynb  make_main_figures_outline_v2.ipynb  make_main_figures_revision.ipynb  production_decay_reverse_engineering.ipynb  structural_sources_of_separability.ipynb  supp_metric_summary_table.tex  virtual_patient_diagnostics.ipynb  virtual_patient_story.ipynb
data_synthesis/notebooks/notebook_plot_outputs/: dataset_summary.csv  feature_correlation_diagnostics.csv  figure2_auc_runs.csv  figure3_main_metric_summary_table.csv  figure3_metric_table.csv  figure4_breast_cancer_edge_status_metrics.csv  figure4_hiv_supplemental_metrics.csv  figure5_noise_auc_floor.csv  (+3 more)
data_synthesis/rfhack/: noise_separability.ipynb
data_synthesis/src/: data.py  figure4_neighborhood.py  main_figures_revision.py  make_figure4_supplementals.py  tSNE.R  tSNE_partial_correlation.R
data_synthesis/util/: transformation.py
models/: cvae.py
rfhack/: noise_separability.ipynb
rfhack/core/: adversarial_hacker.py  adversarial_hacker_.py
rfhack/notebooks/: noise_separability.ipynb
src/: data.py  loaders.py
util/: config.py
(+59 files in other folders)
